Group index now accounts if the user is in the group or not.

--- a/MicroSocialPlatform/Views/Group/Index.cshtml
+++ b/MicroSocialPlatform/Views/Group/Index.cshtml
@@ -9,60 +9,66 @@
     string myId = UserManager.GetUserId(User);
     // Get the membership of the current user to the group, if it exists.
     GroupMembership? myMembership = Model.Memberships.FirstOrDefault(m => m.UserId == myId);
+    bool inGroup = myMembership != null && myMembership.Status != MembershipStatus.Pending;
 }
 
 <div class="chat-container">
     <div class="chatbox">
-       @if(myMembership==null){
-        <form method="post" asp-route="new_group_membership" asp-route-id="@Model.Id" class="join-group">
-            <button type="submit" class="enter-group">
-                Enter Group
-            </button>
-        </form>
+        @if (myMembership == null)
+        {
+            <form method="post" asp-route="new_group_membership" asp-route-id="@Model.Id" class="join-group">
+                <button type="submit" class="enter-group">
+                    Enter Group
+                </button>
+            </form>
         }
-       else
-       {
-           <div class="top-bar">
+        else if (inGroup)
+        {
+            <div class="top-bar">
 
-               <div class="avatar">
-                   <p></p>
-               </div>
-               <div class="chat-name">@Model.Name</div>
-               <div class="icons">
-                   <i class="fas fa-phone"></i>
-                   <i class="fas fa-video"></i>
-               </div>
-               <div class="menu">
-                   <div class="dots"></div>
-               </div>
-           </div>
-           <div class="middle">
-               <div class="text-messages">
+                <div class="avatar">
+                    <p></p>
+                </div>
+                <div class="chat-name">@Model.Name</div>
+                <div class="icons">
+                    <i class="fas fa-phone"></i>
+                    <i class="fas fa-video"></i>
+                </div>
+                <div class="menu">
+                    <div class="dots"></div>
+                </div>
+            </div>
+            <div class="middle">
+                <div class="text-messages">
 
-                   <div class="bubble">
-                       <p>Heyxcvb,..</p>
-                   </div>
-                   <div class="bubble">
-                       <p>Oh, oops .</p>
-                   </div>
+                    <div class="bubble">
+                        <p>Heyxcvb,..</p>
+                    </div>
+                    <div class="bubble">
+                        <p>Oh, oops .</p>
+                    </div>
 
-                   <div class="bubble">
-                       <p class="sent">Na.dxdfcgnvnbnm</p>
-                   </div>
-                   <div class="bubble">
-                       <p class="sent">Well Oh wait! ...</p>
-                   </div>
-               </div>
-           </div>
-           <div class="bottom-bar">
-               <div class="chat">
-                   <input type="text" class="chat-input" placeholder="Type a message..."/>
-                   <button type="submit" class="chat-button">
-                       <i class="fas fa-paper-plane"></i>
-                   </button>
-               </div>
-           </div>
-       }
+                    <div class="bubble">
+                        <p class="sent">Na.dxdfcgnvnbnm</p>
+                    </div>
+                    <div class="bubble">
+                        <p class="sent">Well Oh wait! ...</p>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom-bar">
+                <div class="chat">
+                    <input type="text" class="chat-input" placeholder="Type a message..."/>
+                    <button type="submit" class="chat-button">
+                        <i class="fas fa-paper-plane"></i>
+                    </button>
+                </div>
+            </div>
+        }
+        else
+        {
+            // TODO add something here.
+        }
     </div>
     <div class="information">
         <div class="description">
