--- a/MicroSocialPlatform/wwwroot/css/Group.css
+++ b/MicroSocialPlatform/wwwroot/css/Group.css
@@ -408,7 +408,7 @@
     top: 5%;
     width: 10%;
     display: flex;
-
+    flex-direction: column;
 }
 
 .edit-group-button {
@@ -535,7 +535,7 @@
 .creat-group-btn:hover {
     cursor:pointer;
 }
-.join-group{
+.not-member-yet,.join-group{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -543,18 +543,37 @@
     height: 100%;
     background: var(--chat-bars-color);
 }
-.enter-group{
+.accept-request,.cancel-request,.pending-request,.enter-group{
     margin: auto auto;
-    width: 20vh;
+    width: 20vw;
     height: 5vh;
     box-shadow: var(--profile-box-shadow);
     background: var(--btn-bg);
     backdrop-filter: blur(10px);
     border-radius: 10px 300px 10px 300px;
-    align-self: flex-end;
     color:  var(--all-text-color);;
-    font-size: 1rem;
+    font-size: 0.9rem;
 }
-.enter-group:hover {
+.accept-request,.cancel-request,.enter-group:hover {
+    cursor:pointer;
+}
+.control-btns{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+.accept-request{
+    margin: auto auto;
+    width: 12vw;
+    height: 5vh;
+    box-shadow: var(--profile-box-shadow);
+    background: var(--btn-bg);
+    backdrop-filter: blur(10px);
+    border-radius: 10px 300px 10px 300px;
+    color:  var(--all-text-color);;
+    font-size: 0.9rem;
+}
+.accept-request:hover {
     cursor:pointer;
 }
