--- a/MicroSocialPlatform/Views/Post/Index.cshtml
+++ b/MicroSocialPlatform/Views/Post/Index.cshtml
@@ -6,9 +6,6 @@
 @{
     Layout = "MyLayout";
     ViewData["Title"] = "Show Post";
-    int numComments = DbContext.Comments.Count(c => c.PostId == Model.Id);
-    // Only the owner or the admin can edit the post.
-    bool canEdit = UserManager.GetUserId(User) == Model.UserId || User.IsInRole("Admin");
 }
 <section class="post-with-comments">
     <div class="post-s">
@@ -19,7 +16,7 @@
                     <p class="username">@Model.User.UserName</p>
                 </button>
             </form>
-            @if (canEdit)
+            @if (Model.userCanEdit)
             {
                 // Show the options button.
                 <div class="settings-post-btn">
@@ -44,7 +41,7 @@
             </div>
 
             <span class="likes">3.4k</span>
-            <span class="comment-count">@numComments</span>
+            <span class="comment-count">@Model.numComments</span>
 
         </div>
         <div class="comments-s">
@@ -62,7 +59,7 @@
             }
 
         </div>
-        @if (canEdit)
+        @if (Model.userCanEdit)
         {
             <div class="set-divs hid">
                 <form method="get" asp-route="edit_post" asp-route-id="@Model.Id" style="display: contents;">
