--- a/MicroSocialPlatform/Views/Group/Edit.cshtml
+++ b/MicroSocialPlatform/Views/Group/Edit.cshtml
@@ -6,23 +6,24 @@
 }
 
 
-<div class="edit-post">
-    <h2> Edit a group</h2>
+<div class="edit-group-container">
+    <h1 class="title-cont">Edit a group</h1>
     @using (Html.BeginForm(actionName: "Edit", controllerName: "Group", method: FormMethod.Post))
     {
-        @Html.Label("Title", "Title")
-        <br/>
-        @Html.EditorFor(g => g.Name)
-        <br/>
-        @Html.ValidationMessageFor(g => g.Name, null)
-        <br/>
+        <div class="title-group">
+            @Html.Label("Title", "Title")
 
-        @Html.Label("Content", "Content")
-        <br>
-        @Html.EditorFor(g => g.Description)
-        <br/>
-        @Html.ValidationMessageFor(g => g.Description, null)
-        <br/>
-        <button type="submit">Edit Group</button>
+            @Html.EditorFor(g => g.Name)
+
+            @Html.ValidationMessageFor(g => g.Name, null)
+        </div>
+        <div class="add-description">
+            @Html.Label("Content", "Content")
+
+            @Html.EditorFor(g => g.Description)
+
+            @Html.ValidationMessageFor(g => g.Description, null)
+        </div>
+        <button type="submit" class="creat-group-btn">Edit Group</button>
     }
 </div>
