--- a/MicroSocialPlatform/Views/Post/Edit.cshtml
+++ b/MicroSocialPlatform/Views/Post/Edit.cshtml
@@ -6,23 +6,24 @@
 }
 
 
-<div class="edit-post">
-    <h2> Edit a post</h2>
+<div class="edit-post-container">
+    <h1 class="title-cont">Edit a post</h1>
     @using (Html.BeginForm(actionName: "Edit", controllerName: "Post", method: FormMethod.Post))
     {
+        <div class="title-post">
         @Html.Label("Title", "Title")
-        <br/>
+        
         @Html.EditorFor(p => p.Title)
-        <br/>
+        
         @Html.ValidationMessageFor(p => p.Title, null)
-        <br/>
-
+        </div>
+        <div class="add-content">
         @Html.Label("Content", "Content")
-        <br>
+        
         @Html.EditorFor(p => p.Content)
-        <br/>
+        
         @Html.ValidationMessageFor(p => p.Content, null)
-        <br/>
-        <button type="submit">Edit Post</button>
+        </div>
+        <button type="submit" class="creat-post-btn">Edit Post</button>
     }
 </div>
