--- a/MicroSocialPlatform/wwwroot/css/Group.css
+++ b/MicroSocialPlatform/wwwroot/css/Group.css
@@ -291,17 +291,27 @@
     display: flex;
     flex-direction: column;
 }
-
-.bubble p {
-    background: #b2b2b2;
+.bubble .info {
     padding: 10px 10px 10px 12px;
+    background: #b2b2b2;
+    width: 50%;
+    min-width: max-content;
+    display: flex;
+    flex-direction: column;
     border-radius: 20px;
-    width: max-content;
-    color: black;
-    font-size: 1rem;
     opacity: 1;
 }
-
+.bubble .info p {
+    color: black;
+    font-size: 1.1rem;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    hyphens: auto;
+}
+.bubble .info .user-mess {
+    color: whitesmoke;
+    font-size: 1.3rem;
+}
 .typing {
     position: absolute;
     top: 67%;
