Added message controller and edit functionality.

--- a/MicroSocialPlatform/wwwroot/css/Group.css
+++ b/MicroSocialPlatform/wwwroot/css/Group.css
@@ -463,7 +463,7 @@
 }
 
 
-.new-group-container,.edit-group-container {
+.new-group-container,.edit-group-container, .edit-message-container{
     margin: auto auto;
     width: 80vh;
     height: 90vh;
