Added scrool to last message

--- a/MicroSocialPlatform/Views/Group/Index.cshtml
+++ b/MicroSocialPlatform/Views/Group/Index.cshtml
@@ -115,4 +115,7 @@
                      })
                  }                 
              });
+     let messages = document.querySelectorAll('.bubble');
+     let last = messages.length - 1;
+     messages[last].scrollIntoView(true);
 </script>
