--- a/MicroSocialPlatform/Views/Group/PersonPartial.cshtml
+++ b/MicroSocialPlatform/Views/Group/PersonPartial.cshtml
@@ -6,7 +6,7 @@
     <span class="join-date">@Model.JoinDate</span>
 
     <div class="control-btns">
-        @if (Model.userCanModify)
+        @if (Model.UserCanModify)
         {
             @if (Model.Status == MembershipStatus.Pending)
             {
