--- a/MicroSocialPlatform/Views/Group/MessagePartial.cshtml
+++ b/MicroSocialPlatform/Views/Group/MessagePartial.cshtml
@@ -1,6 +1,9 @@
 @model Message
+@{
+    var messageClass = Model.userOwns ? "sent" : "";
+}
 <div class="bubble">
-    <div class="info sent">
+    <div class="info @messageClass">
         <p class="user-mess">~@Model.User.UserName</p>
         <p class="cont-mess">@Model.Content</p>
     </div>
